--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,18 +1,24 @@
 <header class="header">
 	<div class="header__top top-header">
 		<div class="top-header__container">
-			<div class="top-header__menu menu">
-			<nav class="menu__body">
-				<ul class="menu__list">
-					<li class="menu__item"><a href="" class="menu__link">О нас</a></li>
-					<li class="menu__item"><a href="" class="menu__link">Оплата и доставка</a></li>
-					<li class="menu__item"><a href="" class="menu__link">Новости</a></li>
-					<li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
+			<nav class="top-header__menu menu-top-header">
+				<ul data-da=".menu__body,991.98" class="menu-top-header__list ">
+					<li class="menu-top-header__item"><a href="" class="menu-top-header__link">О нас</a></li>
+					<li class="menu-top-header__item"><a href="" class="menu-top-header__link">Оплата и доставка</a></li>
+					<li class="menu-top-header__item"><a href="" class="menu-top-header__link">Новости</a></li>
+					<li class="menu-top-header__item"><a href="" class="menu-top-header__link">Контакты</a></li>
+					<li class="menu-top-header__item menu-top-header__item_catalog"><a href="" class="menu-top-header__link menu-top-header__link_catalog _icon-bottom">Каталог товаров</a></li>
 				</ul>
 			</nav>
-			</div>
 			<a href="" class="top-header__user _icon-user"><span>Личный кабинет</span></a>
-			<button type="button" class="icon-menu"><span></span></button>
+			<nav hidden class="menu">
+				<button type="button" class="menu__icon icon-menu"><span></span></button>
+				<div class="menu__body">
+					<ul class="menu__list">
+						<li class="menu__item"><a href="" class="menu__link menu__link-catalog _icon-bottom">Каталог товаров</a></li>
+					</ul>
+				</div>
+			</nav>
 		</div>
 	</div>
 	<div class="header__body body-header">
@@ -41,13 +47,13 @@
 					<button type="button" data-popup="#callback" class="phones-header__callback">Заказать звонок</button>
 				</div>
 			<a href="" class="actions-header__favorite _icon-favorite"></a>
-			<div class="actions-header__cart cart-header">
+			<a href="" class="actions-header__cart cart-header">
 				<div class="cart-header__icon _icon-cart"><span>0</span></div>
 				<div class="cart-header__body">
 					<div class="cart-header__sum">0 p.</div>
-					<a href="" class="cart-header__link">Оформить заказ</a>
+					<div class="cart-header__link">Оформить заказ</div>
 				</div>
-			</div>
+			</a>
 			</div>
 		</div>
 	</div>
@@ -64,124 +70,90 @@
 				<div class="menu-catalog__sub-menu sub-menu-catalog ">
 					<div class="sub-menu-catalog__container">
 						<div hidden data-submenu="1" class="sub-menu-catalog__block">
-							<div class="sub-menu-catalog__column">
-								<div class="sub-menu-catalog__category">Категория ножей</div>
-								<ul class="sub-menu-catalog__list">
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Разделочные ножи</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Туристические ножи</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи охотничьи</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Булатные ножи</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи из дамаска</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Тактического назначения</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Метательные ножи</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Мачете и кукри</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи кухонные</a></li>
-								</ul>
-								<a href="" class="sub-menu-catalog__all">Смотреть все</a>
-							</div>
-							<div class="sub-menu-catalog__column">
-								<div class="sub-menu-catalog__category">Производство ножей</div>
-								<ul class="sub-menu-catalog__list">
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи АИР</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи ЗИК</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи ЗЗОСС</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи РОСоружие</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи Оружейник</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Булат Сергея Баранова</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Булат Андрея Умерова</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи Златко</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи Стиль-М</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Оружейная компания</a></li>
-								</ul>
-								<a href="" class="sub-menu-catalog__all">Смотреть все</a>
-							</div>
-							<div class="sub-menu-catalog__column">
-								<div class="sub-menu-catalog__category">Ножи по маркам стали</div>
-								<ul class="sub-menu-catalog__list">
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи из стали 40х102С2М</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи из стали 95х18</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи из стали 100х13м</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи из стали 110х18м-ШД</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи из стали ЭИ-107 ТЦ</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи из стали 50х14МФ</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи из стали AUS-8</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи из стали К340</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи из стали M390</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи из стали ЭП-766</a></li>
-								</ul>
-								<a href="" class="sub-menu-catalog__all">Смотреть все</a>
-							</div>
-							<div class="sub-menu-catalog__column">
-								<div class="sub-menu-catalog__category">Заточка и полировка ножей</div>
-								<ul class="sub-menu-catalog__list">
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Паста ГОИ</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Алмазная паста</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Бруски и камни для заточки</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Заточные системы</a></li>
-								</ul>
-								<a href="" class="sub-menu-catalog__all">Смотреть все</a>
-							</div>
-							<div class="sub-menu-catalog__column">
-								<div class="sub-menu-catalog__category">Ножевая мастерская</div>
-								<ul class="sub-menu-catalog__list">
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножевые клинки</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Заготовки для ножей</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Литье для ножей</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Материалы для рукоятей</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Уход за рукоятиями ножей</a></li>
-								</ul>
-								<a href="" class="sub-menu-catalog__all">Смотреть все</a>
-							</div>
+							<div class="sub-menu-catalog__category">Категория ножей</div>
+							<div class="sub-menu-catalog__category">Производство ножей</div>
+							<div class="sub-menu-catalog__category">Ножи по маркам стали</div>
+							<div class="sub-menu-catalog__category">Заточка и полировка ножей</div>
+							<div class="sub-menu-catalog__category">Ножевая мастерская</div>
+							<ul class="sub-menu-catalog__list">
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Разделочные ножи</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Туристические ножи</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи охотничьи</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Булатные ножи</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи из дамаска</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Тактического назначения</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Метательные ножи</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Мачете и кукри</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи кухонные</a></li>
+							</ul>
+							<ul class="sub-menu-catalog__list">
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи АИР</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи ЗИК</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи ЗЗОСС</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи РОСоружие</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи Оружейник</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Булат Сергея Баранова</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Булат Андрея Умерова</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи Златко</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи Стиль-М</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Оружейная компания</a></li>
+							</ul>
+							<ul class="sub-menu-catalog__list">
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи из стали 40х102С2М</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи из стали 95х18</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи из стали 100х13м</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи из стали 110х18м-ШД</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи из стали ЭИ-107 ТЦ</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи из стали 50х14МФ</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи из стали AUS-8</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи из стали К340</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи из стали M390</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи из стали ЭП-766</a></li>
+							</ul>
+							<ul class="sub-menu-catalog__list">
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Паста ГОИ</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Алмазная паста</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Бруски и камни для заточки</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Заточные системы</a></li>
+							</ul>
+							<ul class="sub-menu-catalog__list">
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножевые клинки</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Заготовки для ножей</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Литье для ножей</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Материалы для рукоятей</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Уход за рукоятиями ножей</a></li>
+							</ul>
+								<div class="sub-menu-catalog__footer"><a href="" class="sub-menu-catalog__all">Смотреть все</a></div>
+								<div class="sub-menu-catalog__footer"><a href="" class="sub-menu-catalog__all">Смотреть все</a></div>
+								<div class="sub-menu-catalog__footer"><a href="" class="sub-menu-catalog__all">Смотреть все</a></div>
+								<div class="sub-menu-catalog__footer"><a href="" class="sub-menu-catalog__all">Смотреть все</a></div>
+								<div class="sub-menu-catalog__footer"><a href="" class="sub-menu-catalog__all">Смотреть все</a></div>
 						</div>
 						<div hidden data-submenu="2" class="sub-menu-catalog__block">
-							<div class="sub-menu-catalog__column">
-								<div class="sub-menu-catalog__category">Категория ножей</div>
-								<ul class="sub-menu-catalog__list">
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Разделочные ножи</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Туристические ножи</a></li>
-								</ul>
-								<a href="" class="sub-menu-catalog__all">Смотреть все</a>
-							</div>
-							<div class="sub-menu-catalog__column">
-								<div class="sub-menu-catalog__category">Производство ножей</div>
-								<ul class="sub-menu-catalog__list">
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи АИР</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи ЗИК</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи ЗЗОСС</a></li>
-								</ul>
-								<a href="" class="sub-menu-catalog__all">Смотреть все</a>
-							</div>
-							<div class="sub-menu-catalog__column">
-								<div class="sub-menu-catalog__category">Ножи по маркам стали</div>
-								<ul class="sub-menu-catalog__list">
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи из стали 40х102С2М</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи из стали 95х18</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи из стали 100х13м</a></li>
-								</ul>
-								<a href="" class="sub-menu-catalog__all">Смотреть все</a>
-							</div>
-							<div class="sub-menu-catalog__column">
-								<div class="sub-menu-catalog__category">Заточка и полировка ножей</div>
-								<ul class="sub-menu-catalog__list">
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Паста ГОИ</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Алмазная паста</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Бруски и камни для заточки</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Заточные системы</a></li>
-								</ul>
-								<a href="" class="sub-menu-catalog__all">Смотреть все</a>
-							</div>
-							<div class="sub-menu-catalog__column">
-								<div class="sub-menu-catalog__category">Ножевая мастерская</div>
-								<ul class="sub-menu-catalog__list">
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножевые клинки</a></li>
-									<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Заготовки для ножей</a></li>
-								</ul>
-								<a href="" class="sub-menu-catalog__all">Смотреть все</a>
-							</div>
+							<div class="sub-menu-catalog__category">Производство ножей</div>
+							<div class="sub-menu-catalog__category">Ножи по маркам стали</div>
+							<ul class="sub-menu-catalog__list">
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Паста ГОИ</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Алмазная паста</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Бруски и камни для заточки</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Заточные системы</a></li>
+							</ul>
+							<ul class="sub-menu-catalog__list">
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножевые клинки</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Заготовки для ножей</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Литье для ножей</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Материалы для рукоятей</a></li>
+								<li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Уход за рукоятиями ножей</a></li>
+							</ul>
+								<div class="sub-menu-catalog__footer"><a href="" class="sub-menu-catalog__all">Смотреть все</a></div>
+								<div class="sub-menu-catalog__footer"><a href="" class="sub-menu-catalog__all">Смотреть все</a></div>
 						</div>
+
 					</div>
 				</div>
 			</nav>
 		</div>
 	</div>
+	</div>
+
 </header>
